# Task

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
OrderBook/: CMakeLists.txt  finstrument.cpp  finstrument.h  inputjsonparser.cpp  inputjsonparser.h  orderbook.cpp  orderbook.h
Output/: 20.txt  ABBN.txt  ADEN.txt  CFR.txt  CIMB.txt  EPMB.txt  FileTest01.txt  GLO.txt  KING.txt  NESN.txt  QUEEN.txt  REX.txt  SMGR.txt  SONG.txt  TAK.txt  UBSG.txt  UHR.txt  ZURN.txt
Test/: CMakeLists.txt  orderbooktest.cpp  test.json  test2.json
